# mazou

./: .gitignore  BUSINESS.md  QA_MANUAL_TEST_PLAN.md  QA_TEST_CASES.csv  generate_deck.py  index.html  next.config.ts  package-lock.json  vercel.json
app/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
archive/: dashboard.html  mazou dashboard.jsx  mazou landing.html  mazou_landing_v2.html
backend/: .env.example  QA_REPORT.md  alembic.ini  pyproject.toml  requirements.txt
backend/billing/: bundles.py  invoicing.py  paystack.py  wallet.py
backend/gateway/: main.py
backend/gateway/middleware/: admin_auth.py  auth.py
backend/gateway/routers/: admin.py  auth.py  byok.py  completions.py  dashboard.py  keys.py  models.py  routing.py  usage.py  wallet.py  webhooks.py
backend/gateway/routing/: engine.py  fallback.py
backend/migrations/: env.py
backend/migrations/versions/: 272b2a745744_add_superadmin_and_org_status.py  f41686d7a0d8_initial_schema.py
backend/shared/: cache.py  config.py  database.py  encryption.py  models.py  pricing.py  schemas.py  seed.py
backend/tests/: conftest.py  test_auth.py  test_completions.py  test_dashboard.py  test_keys.py  test_models.py  test_performance.py  test_routing.py  test_security.py  test_stress.py  test_usage.py  test_wallet.py  test_webhooks.py
backend/tests/stress/: conftest.py  test_stress.py
brand/: 01-BRAND-GUIDELINES.md  02-MESSAGING-GUIDE.md  03-PRESS-KIT.md  04-BRAND-NARRATIVE.md  brand-assets.html
demo/: index.html  package.json
docs/: INSTRUCTIONS.md  (+7 more)
(+103 files in other folders)
